--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,12 @@
         </div>
     </div>
 
+    <footer>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+            <a>Copyright © Now</a>
+        </nav>
+    </footer>
+    
 </body>
-
+    
 </html>
