minor changes, work on fixing headers to be consitsant

--- a/contact.html
+++ b/contact.html
@@ -6,21 +6,19 @@
     
     <header>
         <nav><div class="topmenu">
-            <div class="col-md-9"><h1 class="me">
+            <div><h1 class="me">
                 Hi, I'm Jonathan Meidell
                 </h1>
                 
                 </div>
-                    <div class="links-container row">
-                        <div class="col-lg-9"></div>
-                            <!--- dummy space --->                       
-                        <div class="col-md-1 col-lg-1"><a href="index.html">
+                    <div class="links-container row">               
+                        <div><a href="index.html">
                             Index
                         </a></div>    
-                        <div class="col-md-1 col-lg-1"><a href="portfolio.html">
+                        <div><a href="portfolio.html">
                             Portfolio
                         </a></div>   
-                        <div class="col-md-1 col-lg-1"><a href="contact.html">
+                        <div><a href="contact.html">
                             Contact
                         </a></div>
                     </div>
