minor changes; took away rest of bootstrap

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,21 +12,19 @@
     
     <header>
         <nav><div class="topmenu">
-            <div class="col-md-9"><h1 class="me">
+            <div><h1 class="me">
                 Hi, I'm Jonathan Meidell
                 </h1>
-                
                 </div>
                     <div class="links-container row">
-                        <div class="col-lg-9"></div>
-                            <!--- dummy space --->                       
-                        <div class="col-md-1 col-lg-1"><a href="index.html">
+                        <div></div>
+                        <div><a href="index.html">
                             Index
                         </a></div>    
-                        <div class="col-md-1 col-lg-1"><a href="portfolio.html">
+                        <div><a href="portfolio.html">
                             Portfolio
                         </a></div>    
-                        <div class="col-md-1 col-lg-1"><a href="contact.html">
+                        <div><a href="contact.html">
                             Contact
                         </a></div>
                     </div>
@@ -38,31 +36,31 @@
     <h1 id="profile">Profile</h1>
 
     <div id="box">
-        <div class="row">
-            <div class="col-md-4">
+        <div>
+            <div>
                 <div id="burger">
                     <p>Burger</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div>
                 <div id="curry">
                     <p>Curry</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div>
                 <div id="speg">
                     <p>Speghetti</p>
                 </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-4">
+        <div>
+            <div>
                 <div id="chicken">
                     <p>Chicken</p>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div>
                 <div id="soup">
                     <p>Soup</p>
                 </div>
@@ -71,7 +69,7 @@
     </div>
 
     <footer>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+        <nav>
             <a>Copyright © Now</a>
         </nav>
     </footer>
