--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </div>
 
     <footer>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+        <nav>
             <a>Copyright © Now</a>
         </nav>
     </footer>
