--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>            
 
     <footer>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+        <nav>
             <a>Copyright © Now</a>
         </nav>
     </footer>
