fix to links and header and footer

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     </div>            
 
     <footer>
-        <nav>
+        <div>
             <a>Copyright © Now</a>
-        </nav>
+        </div>
     </footer>
 
 </body>
