--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
                 Hi, I'm Jonathan Meidell
                 </h1>
                 </div>
-                    <div class="links-container row">
+                    <div class="links-container">
                         <div></div>
                         <div><a href="index.html">
                             Index
