--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
                 </h1>
                 
                 </div>
-                    <div class="links-container row">               
+                    <div class="links-container">               
                         <div><a href="index.html">
                             Index
                         </a></div>    
